# Ximalaya-Downloader-Next

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  overview.md  risk-control-observations.md  webui.md
src/xdl/: __init__.py  __main__.py  composition.py  errors.py  risk.py  settings.py
src/xdl/adapters/: __init__.py  _album_list.py  cookiejar_file.py  decoder.py  sink_file.py  source_chrome.py  source_http.py  source_playwright.py  store_sqlite.py
src/xdl/adapters/sign/: __init__.py  cookies.py  extractor.py  py_sign.py
src/xdl/application/: __init__.py  diagnostics.py  facade.py  usecases.py
src/xdl/config/: __init__.py  device_info_default.json  paths.py  platform.py  sign.py
src/xdl/domain/: __init__.py  models.py  naming.py
src/xdl/frontends/: cli.py  tui.py  web.py  web_config.py  web_runtime.py
src/xdl/frontends/web_static/: app.js  index.html  styles.css
src/xdl/ports/: __init__.py  ports.py
tests/: test_cli.py  test_decoder.py  test_domain.py  test_extractor.py  test_facade.py  test_pysign.py  test_risk_control.py  test_sink_file.py  test_source_http.py  test_store.py  test_tui.py  test_usecases.py  test_web_api.py  test_web_config.py  test_web_runtime.py
