[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ximalaya-downloader-next"
version = "0.1.0"
description = "喜马拉雅音频下载器（核心库 + CLI）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "requests>=2.28",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
xdl = "xdl.frontends.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
