[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ximalaya-downloader-next"
version = "0.1.0"
description = "喜马拉雅音频下载器（核心库 + CLI）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "requests>=2.28",
    "playwright>=1.40",
    "pycryptodome>=3.15",
    "curl-cffi>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
tui = ["textual>=0.60"]

[project.scripts]
xdl = "xdl.frontends.cli:main"
xdl-tui = "xdl.frontends.tui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"xdl.config" = ["*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
