[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ximalaya-downloader-next"
version = "0.1.0"
description = "喜马拉雅音频下载器（核心库 + CLI）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "requests>=2.28",
    "playwright>=1.40",
    "pycryptodome>=3.15",
    "curl-cffi>=0.7",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.27"]

[project.scripts]
xdl = "xdl.frontends.cli:main"
xdl-web = "xdl.frontends.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"xdl.config" = ["*.json"]
"xdl.frontends" = ["web_static/*.html", "web_static/*.css", "web_static/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
